# better-ilias

./: .editorconfig  .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build.sh  flake.nix  index.html  package.json  pnpm-lock.yaml  staructure.ron  unocss.config.ts  vetur.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  rust.yml
Backend/: .gitignore  Cargo.toml  Rocket.toml  build.rs  db.sqlite-shm  db.sqlite-wal  sync.ron  token.txt
Backend/src/: client.rs  config.rs  helpers.rs  main.rs  schema.rs  server.rs  sync.rs  tree.rs
Backend/test_html/: folder.html
Frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
Frontend/src/: App.vue  index.css
Frontend/src/components/: DirectLink.vue  Exercise.vue  File.vue  Folder.vue  Forum.vue  IlTypes.ts  Ilias.vue  Leaf.vue  Login.vue  Notes.vue  UpdateIcon.vue  compositions.ts  types.ts
frontend/: .editorconfig  .eslintrc  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  unocss.config.ts  vite.config.ts
frontend/src/: App.vue  api.ts  auto-imports.d.ts  components.d.ts  main.ts  types.ts  utils.ts
frontend/src/api/: notes.ts
frontend/src/components/: DirectLink.vue  DynamicChildren.vue  Exercise.vue  File.vue  Folder.vue  Forum.vue  IlTypes.ts  Leaf.vue  SelectBox.vue  UpdateIcon.vue  Video.vue  compositions.ts
frontend/src/layouts/: default.vue
frontend/src/pages/: index.vue  login.vue
frontend/src/store/: tree.ts
frontend/src/styles/: main.css
src/: App.vue  auto-imports.d.ts  config.rs  helpers.rs  main.rs  sync.rs  tree.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2021-04-14-134424_create_notes/: down.sql  up.sql
src-tauri/src/: client.rs  ilias.rs  lib.rs  main.rs  server.rs  string_serializer.rs  tree.rs
src/components/: Exercise.vue  Folder.vue  Forum.vue  Leaf.vue  Video.vue
src/composables/: visibility.ts
src/pages/: index.vue
test_html/: direct_link.html  file.html  forum.html
tst/tst/: package.json
tst/tst/src-tauri/: Cargo.toml  tauri.conf.json
tst/tst/src-tauri/src/: main.rs
