[package]
name = "better_ilias"
version = "0.1.0"
authors = ["Septias <39526136+Septias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
hyper-tls ="0.4.3"
tokio = { version = "0.2.24", features = ["full"] }
scraper = "0.12.0"
futures = "0.3.8"
serde = "1.0.118"
ron = "0.6.4"
log = "0.4.11"
env_logger = "0.8.2"