[package]
authors = ["Septias <39526136+Septias@users.noreply.github.com>"]
edition = "2018"
name = "better_ilias"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
env_logger = "0.8.3"
futures = "0.3.13"
hyper = {version = "0.14.4", features = ["client", "http1"]}
hyper-tls = "0.5.0"
itertools = "*"
lazy_static = "1.4.0"
log = "0.4.14"
open = "1.6.0"
reqwest = {version = "*", features = ["cookies", "blocking"]}
rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket"}
ron = "0.6.4"
scraper = "0.12.0"
serde = {version = "1.0.124", features = ["rc"]}
thiserror = "*"
tokio = {version = "1.4.0", features = ["full"]}
urlencoding = "*"
