[package]
authors = ["Septias <39526136+Septias@users.noreply.github.com>"]
build = "build.rs"
edition = "2018"
name = "better_ilias"
version = "1.0.0"

[package.metadata.winres]
FileDescription = "A program to navigate Ilias and sync files to the local filesystem"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.13"
itertools = "*"
lazy_static = "1.4.0"
open = "1.6.0"
ron = "0.6.4"

env_logger = "0.8.3"
log = "0.4.14"

hyper-tls = "0.5.0"
scraper = "0.12.0"
urlencoding = "1.1.1"

anyhow = "1.0.40"
thiserror = "1.0.24"

[dependencies.hyper]
features = ["client", "http1"]
version = "0.14.4"

[dependencies.serde]
features = ["rc"]
version = "1.0.125"

[dependencies.tokio]
features = ["full"]
version = "1.4.0"

[dependencies.reqwest]
features = ["cookies", "blocking"]
version = "0.11.2"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_sqlite_pool", "json", "serve"]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.diesel]
version = "1.4.6"
