[package]
name = "better-ilias"
version = "1.0.1"
description = "A program to navigate Ilias and sync files to the local filesystem"
authors = ["Sebastian Klähn"]
repository = "https://github.com/Septias/better-ilias"
default-run = "better-ilias"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[package.metadata.winres]
FileDescription = "A program to navigate Ilias and sync files to the local filesystem"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
serde_json = "1.0"
tauri = { version = "1.6", features = ["api-all", "default"] }
itertools = "0.12.1"
lazy_static = "1.4"
open = "5.1.2"
env_logger = "0.11.3"
log = "0.4"
scraper = "0.19.0"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
headless_chrome = {git="https://github.com/Billy-Sheppard/rust-headless-chrome.git", features = ["fetch"] }
failure = "0.1.8"

[dependencies.serde]
features = ["rc", "derive"]
version = "1.0"

[dependencies.tokio]
features = ["fs", "macros"]
version = "1.37.0"

[dependencies.reqwest]
features = ["cookies", "blocking"]
version = "0.12"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["json"]
